[gd_scene load_steps=7 format=3 uid="uid://j2v6xckoe5s7"]

[ext_resource type="Script" path="res://Scenes/UI/Generation/SimulationPanel.gd" id="1_hq652"]
[ext_resource type="Script" path="res://Scenes/UI/Generation/HBox2.gd" id="2_iw5bu"]
[ext_resource type="PackedScene" path="res://Scenes/UI/Generation/Sliders.tscn" id="2_m13ju"]
[ext_resource type="PackedScene" path="res://Scenes/UI/Generation/Noises.tscn" id="3_msxoh"]
[ext_resource type="PackedScene" uid="uid://xhltfv1xjcms" path="res://Scenes/UI/Generation/Cellular Automata.tscn" id="5_bv8k4"]

[sub_resource type="GDScript" id="GDScript_ub4mg"]
script/source = "extends Label

func _process(_delta: float) -> void:
	text = str(\"FPS: %s\" % [Engine.get_frames_per_second()])
"

[node name="SimulationPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 7.0
offset_right = 4.0
offset_bottom = 7.0
mouse_filter = 2
script = ExtResource( "1_hq652" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -512.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2(512, 512)
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
offset_left = 7.0
offset_top = 7.0
offset_right = 505.0
offset_bottom = 505.0
mouse_filter = 2

[node name="HBox" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
offset_right = 498.0
offset_bottom = 29.0
mouse_filter = 2

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer/HBox"]
offset_top = 1.0
offset_right = 229.0
offset_bottom = 27.0
size_flags_horizontal = 3
text = "Simulation Settings"

[node name="FPS" type="Label" parent="PanelContainer/VBoxContainer/HBox"]
offset_left = 233.0
offset_top = 1.0
offset_right = 462.0
offset_bottom = 27.0
size_flags_horizontal = 3
text = "FPS:199
"
horizontal_alignment = 2
script = SubResource( "GDScript_ub4mg" )

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer/HBox"]
offset_left = 466.0
offset_right = 498.0
offset_bottom = 29.0
rect_min_size = Vector2(32, 0)
text = "X
"

[node name="HBox2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 33.0
offset_right = 498.0
offset_bottom = 66.0
mouse_filter = 2
script = ExtResource( "2_iw5bu" )

[node name="Seed" type="Label" parent="PanelContainer/VBoxContainer/HBox2"]
offset_top = 3.0
offset_right = 41.0
offset_bottom = 29.0
text = "Seed:"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBox2"]
offset_left = 45.0
offset_right = 386.0
offset_bottom = 33.0
size_flags_horizontal = 3

[node name="Size" type="Label" parent="PanelContainer/VBoxContainer/HBox2"]
offset_left = 390.0
offset_top = 3.0
offset_right = 424.0
offset_bottom = 29.0
text = "Size:"

[node name="LineEdit2" type="LineEdit" parent="PanelContainer/VBoxContainer/HBox2"]
offset_left = 428.0
offset_right = 498.0
offset_bottom = 33.0

[node name="Tabs" type="TabContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 70.0
offset_right = 498.0
offset_bottom = 438.0
mouse_filter = 0
size_flags_vertical = 3
tab_alignment = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Noises" parent="PanelContainer/VBoxContainer/Tabs" instance=ExtResource( "3_msxoh" )]

[node name="Sliders" parent="PanelContainer/VBoxContainer/Tabs" instance=ExtResource( "2_m13ju" )]
visible = false

[node name="Cellular Automata" parent="PanelContainer/VBoxContainer/Tabs" instance=ExtResource( "5_bv8k4" )]
visible = false

[node name="Generation" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
offset_top = 442.0
offset_right = 498.0
offset_bottom = 465.0
mouse_filter = 2

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
offset_top = 469.0
offset_right = 498.0
offset_bottom = 498.0
text = "Generate"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBox/Exit" to="." method="_on_Exit_pressed"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/HBox2/LineEdit" to="PanelContainer/VBoxContainer/HBox2" method="_on_LineEdit_text_submitted"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/HBox2/LineEdit2" to="PanelContainer/VBoxContainer/HBox2" method="_on_LineEdit2_text_submitted"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]

[editable path="PanelContainer/VBoxContainer/Tabs/Cellular Automata"]
